<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/lodhari_techno_pvt_ltd"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/heretohelp"
                android:textColor="@color/orange"
                android:textSize="22sp" >
            </TextView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/contactsupport"
                android:textColor="@color/orange"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/tvContactSuport"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_title_text"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/customersupport"
                android:textColor="@color/orange"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/supporttime"
                android:textColor="@color/black"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/visitus"
                android:textColor="@color/orange"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_title_text"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/address"
                android:textColor="@color/orange"
                android:textSize="18sp" >
            </TextView>

            <TextView
                android:id="@+id/tvEmailSuport"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_title_text"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/emailsupport"
                android:textColor="@color/orange"
                android:textSize="20sp" >
            </TextView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>