<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightish" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_border"
            android:drawableLeft="@drawable/icon_email"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/icon_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textColor="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="18sp" >
        </EditText>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_border"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:paddingLeft="20dp"
            android:textColor="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="18sp" >
        </EditText>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/orange_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvValidation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@color/orange"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>